<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Frenzy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Frenzy</string>
    <string name="frenzy_foods">Frenzy Foods</string>
    <string name="image">Image</string>
    <string name="address">Address</string>
    <string name="deals">Deals</string>
    <string name="orders">Orders</string>
    <string name="rate">Rate this App</string>
    <string name="feedback">Feedback</string>
    <string name="tell_f">Tell A Friend</string>
    <string name="action_about">About</string>
    <string name="help">Help</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="fried_rice">Fried Rice</string>
    <string name="format_naira"><b>\u20A6 </b><xliff:g id="end"><b>%.2f</b></xliff:g></string>
    <string name="format_pay"><b><xliff:g id="price"><b>%.2f</b></xliff:g>x<xliff:g id="times"><b>%d</b>
    </xliff:g> - \u20A6  <xliff:g id="total"><b>%.2f</b></xliff:g></b></string>
    <string name="order">Order</string>
    <string name="order_sub">Order this menu from frenzy and have it delivered to you</string>
    <string name="share">Share</string>
    <string name="share_sub">Tell a friend about this menu in Frenzy.</string>
    <string name="title_activity_oder">Oder.::</string>
    <string name="format_quantitiy">Quantity <xliff:g id="end"><b>%s</b></xliff:g></string>
    <string name="basic_price">Basic Price</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="title_activity_check_out">CheckOutActivity</string>
    <string name="total">Total</string>
    <string name="delivery_choice">Choose Delivery Type</string>

    <string name="subtotal">Subtotal</string>
    <string name="s_charg">Service Charge( 0% )</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="title_activity_deals">Deals.::</string>
    <string name="format_order_string"><xliff:g id="qty"><b>%d</b></xliff:g>x<xliff:g id="name"><b>%s</b></xliff:g> @ \u20A6
        <xliff:g id="u_price"><b>%.2f</b></xliff:g></string>
    <string name="delivery_address">Choose Delivery Address</string>
    <string name="payment_type">Choose Payment Type</string>
    <string name="plaece_order">Place Order</string>
    <string name="in_20_min">N 50.00</string>
    <string name="in_20_mins">in 20 min</string>
    <string name="in_10_mins">Ready in 10 min</string>
    <string name="free">Free</string>
    <string name="telephone">Telephone Number</string>
    <string name="cash_on_delivery">Cash On Delivery.</string>
    <string name="pos">Point Of Sale (POS)</string>
    <string name="db_card">Online (Debit/Credit Card)</string>
    <string name="how_to_pay">How Would You Like to Pay?</string>
    <string name="title_activity_address">Address</string>
    <string name="title_activity_my_orders">MyOrders</string>
    <string name="address_list">Your Address List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unn">University Of Nigeria Nsukka</string>
    <string name="hall">Choose Hall</string>
    <string name="room">Room No:</string>
    <string name="enter_room_no">Please Enter your Room Number</string>
    <string name="add_address">Add Address</string>

    <string name="facebook_app_id">244094832591633</string>
    <string name="title_activity_order_deal">Place Order</string>
    <string name="action_logout">Logout</string>
    <string name="zero">0</string>
    <string name="select">Select</string>
    <string name="select_sub">Use this address</string>
    <string name="delete">Delete</string>
    <string name="del_sub">Remove this address from list</string>
    <string name="edit">Modify</string>
    <string name="edit_sub">Modify this address</string>
    <string name="d_address">Delivery Address:</string>
    <string name="basket_break_down_text" translatable="false"><b>Break Down:</b>\nSubtotal\nService fee(0%)\nVAT(0%)\nDelivery Fee</string>
    <string name="format_contact">Contact:<xliff:g id="name"><b>%s</b></xliff:g></string>
    <string name="vat">VAT (0%)</string>
    <string name="enter_phone">Please enter phone number</string>
    <string name="choose_delivery_type">Choose Delivery Type:</string>
</resources>
