<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single" android:id="@+id/g1">
        <item
            android:id="@+id/action_address"
            android:checked="false"
            android:title="@string/address"
            android:icon="@drawable/ic_account_box"/>
        <item
            android:id="@+id/action_deals"
            android:checked="false"
            android:title="@string/deals"
            android:icon="@drawable/ic_attach_money"/>

        <item
            android:id="@+id/action_orders"
            android:checked="false"
            android:title="@string/orders"
            android:icon="@drawable/ic_local_restaurant"/>
    </group>


    <group android:checkableBehavior="single" android:id="@+id/g2">
        <item
            android:id="@+id/action_rate"
            android:checked="false"
            android:title="@string/rate"
            android:icon="@drawable/ic_star_outline"/>
        <item
            android:id="@+id/action_feedback"
            android:checked="false"
            android:title="@string/feedback"
            android:icon="@drawable/ic_comment"/>

        <item
            android:id="@+id/action_share"
            android:checked="false"
            android:title="@string/tell_f"
            android:icon="@drawable/ic_share"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/g3">
        <item
            android:id="@+id/action_settings"
            android:checked="false"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/action_about"
            android:checked="false"
            android:title="@string/action_about"
            android:icon="@drawable/ic_info_outline" />
        <item
            android:id="@+id/action_help"
            android:checked="false"
            android:title="@string/help"
            android:icon="@drawable/ic_help"/>
    </group>

</menu>
